# dart-mlx-ffi

./: .gitignore  .pubignore  AGENTS.md  API_MATRIX.md  BENCHMARK.md  CHANGELOG.md  LICENSE  PARITY.md  README.md  RELEASE.md  RELEASE_NOTES.md  analysis_options.yaml  ffigen.yaml  pubspec.yaml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
benchmark/: common.py  generic_import_run.dart  models.dart  parakeet_tdt_sweep.py  parity_dart.dart  parity_py.py  publish_model_list.json  publish_model_list_sweep.py  publish_report.py  qwen3_asr_mel_e2e_parity.py  real_compare.py  real_nn.dart  recent_text_sweep.py  recent_tts_sweep.py  recent_unique_models.json  recent_unique_sweep.py  recent_vlm_sweep.py  run_all.dart  run_all.py  text_export_sweep.py  tts_export_sweep.py  vlm_export_sweep.py
benchmark/kitten_tts/: conv_post_probe.py  front_trace.dart  kitten_run.dart  mlx_audio_compare.py  mlx_audio_export.py  mlx_audio_infer.py  mlx_audio_models.py  rand_dump.dart
benchmark/kitten_tts/mlx_audio/: text_cleaner.dart
benchmark/parakeet_tdt/: mel_dump.dart  model_bench.dart  python_ref.py
benchmark/parity/: parity_compare.py  parity_dart.dart
benchmark/qwen2_5/: qwen_debug.dart  qwen_debug.py  qwen_run.dart  real_nn.dart  real_nn.py
benchmark/qwen3_5/: qwen35_run.dart  unsloth_compare.py
benchmark/qwen3_5/mlx_vlm/: gated_delta.dart  linear.dart  tensor_map.dart
benchmark/qwen3_asr/: dart_parity.dart  python_ref.py  speech_test.dart  speed_bench.dart  speed_bench.py  stream_test.dart
benchmark/qwen3_asr/ref_data/: encoder_shape.json  gen_tokens.json  last_hidden_shape.json  mel_shape.json  metadata.json  prefill_logits.json  prompt_tokens.json
benchmark/synthetic/: compare.py  models.dart  models.py  tiny.dart
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner/Configs/: AppInfo.xcconfig
example/web/: index.html  manifest.json
example/windows/: CMakeLists.txt
example/windows/runner/: Runner.rc  main.cpp
hook/: build.dart
lib/: dart_mlx_ffi.dart  dart_mlx_ffi_bindings_generated.dart  models.dart  raw.dart
lib/src/: internal_hooks.dart  shim_bindings.dart  stable_api.dart
lib/src/models/kitten_tts/: args.dart  engine.dart  espeak_g2p.dart  kitten_tts.dart  lstm.dart  model.dart  npz.dart  preprocess.dart  preprocess_basic.dart  prosody.dart  stft.dart  vocoder_core.dart
lib/src/models/paddle_ocr_vl/: cache.dart  config.dart  decode.dart  layers.dart  linear.dart  paddle_ocr_vl.dart  rope.dart  runner.dart  vision.dart
lib/src/models/parakeet_tdt/: bundle.dart  conf.dart  dec.dart  enc.dart  encoder.dart  nn.dart  (+3 more)
lib/src/raw/: mlx_bindings.g.dart  mlx_bindings_extras.dart  raw.dart
lib/src/shim/: ane.dart  ane_interop.dart  array.dart  base.dart  conv.dart  coreml_ane.dart  extra.dart  io2.dart  io3.dart  math2.dart  misc.dart  mm.dart  more.dart  ops.dart  rand.dart  scan.dart  sys.dart  tensor.dart
lib/src/stable/: ane.dart  ane_chain.dart  ane_decode.dart  ane_interop.dart  ane_io.dart  ane_loop.dart  ane_module.dart  ane_run.dart  array.dart  conv.dart  core.dart  coreml_ane.dart  dev.dart  export.dart  extra.dart  fast.dart  fast_k.dart  fun.dart  io.dart  io_mem.dart  math.dart  misc.dart  mod.dart  more.dart  ops.dart  quant.dart  rt.dart  scan.dart  sys.dart  tensor.dart  util.dart  xform.dart
models/: README.md
models/common/: import_run.dart
models/text_lm/: README.md  convert_unsloth_mlx.py  export_bundle.py  test_convert_unsloth_mlx.py
native/: CMakeLists.txt  ane_eval_p.h  ane_p.h  bridge.h  bridge_ane_chain.cpp  bridge_ane_chain_state.cpp  bridge_ane_data.cpp  bridge_ane_eval.cpp  bridge_ane_interop.cpp  bridge_ane_model.cpp  bridge_ane_private.cpp  bridge_ane_stub.cpp  bridge_array.cpp  bridge_conv.cpp  bridge_core.cpp  bridge_coreml.mm  bridge_extra.cpp  bridge_fast.cpp  bridge_io.cpp  bridge_math.cpp  bridge_memio.cpp  bridge_misc.cpp  bridge_mm.cpp  bridge_more.cpp  bridge_ops.cpp  bridge_rand.cpp  bridge_scan.cpp  bridge_sys.cpp  bridge_tensor.cpp
private_ane/: README.md
private_ane/models/josie/: README.md
private_ane/models/qwen3_5_0_8b/: README.md  common.py
private_ane/models/qwen3_asr/: README.md
private_ane/shared/: README.md
private_ane/shared/benchmark/: ane_private_ffn_bench.py  ane_private_large_bench.py  ane_private_make_ffn_models.py  ane_private_make_large_models.py  ane_private_make_models.py  ane_private_mlprogram_bench.py
private_ane/shared/python/: private_ane_ctypes.py  private_probe_cache.py
test/: ane_private_ffn_test.dart  ane_private_large_test.dart  ane_private_mlprogram_test.dart  ane_real_model_test.dart  ane_test.dart  basic_test.dart  conv_test.dart  coreml_ane_real_test.dart  coreml_dart_real_test.dart  coverage_test.dart  extra_test.dart  fn_test.dart  io_stream_test.dart  josie_attention_real_test.dart  josie_fast_decode_test.dart  josie_full_model_test.dart  josie_layer_ops_probe_test.dart  josie_manual_causal_heads_test.dart  josie_manual_causal_test.dart  josie_private_test.dart  josie_sdpa_test.dart  josie_tiled_export_probe_test.dart  kitten_conv_post_probe_test.dart  kitten_input_test.dart  math2_test.dart  math_io_test.dart  misc_test.dart  mm_test.dart  more_test.dart  ops_test.dart  paddle_ocr_v15_parity_test.dart  qwen35_test.dart  qwen3_asr_private_test.dart  qwen3_asr_ref_test.dart  rand_test.dart  rt_test.dart  scan_test.dart  sys_test.dart  tensor_test.dart
tool/: ane_private_diag.dart  ane_private_real_bench.dart  coreml_ane_make_models.py  coreml_ane_real_bench.py  dist_smoke.dart  dump_paddle_v15_reference.py  generate_docs.sh  qwen35_full_infer.dart  qwen35_private_ane_bench.dart  qwen35_private_ane_grouped_shard_bench.dart  qwen35_private_ane_layer_bench.dart  qwen35_private_ane_pack_bench.dart  qwen35_private_ane_shard_bench.dart  qwen35_vlm_debug.dart  qwen35_vlm_test.dart
(+107 files in other folders)
