[project]
name = "dart-mlx-ffi-bench"
version = "0.0.0"
description = "Python benchmark tooling for dart-mlx-ffi."
requires-python = ">=3.11"
dependencies = [
  "espeakng-loader>=0.2.4",
  "huggingface-hub>=1.6.0",
  "mlx==0.31.1",
  "mlx-lm>=0.31.1",
  "numpy>=1.26.4",
  "phonemizer-fork>=3.3.2",
  "pillow>=10.3.0",
  "pydantic>=2.0.0",
  "requests>=2.31.0",
  "safetensors>=0.4.3",
  "soundfile>=0.13.1",
  "transformers>=5.1.0",
]

[tool.uv]
package = false
